--- a/config/realsense/realsense_fisheye_config_iros.yaml
+++ b/config/realsense/realsense_fisheye_config_iros.yaml
@@ -1,28 +1,27 @@
 %YAML:1.0
 
 #common parameters
-imu_topic: "/imu0"
-image_topic: "/cam0/image_raw"
-output_path: "/home/pang/output/"
+imu_topic: "/imu"
+image_topic: "/mav/cam0"
+output_path: "/home/pang/iros/output/"
 
 #camera calibration 
-model_type: PINHOLE
+model_type: KANNALA_BRANDT
 camera_name: camera
-image_width: 752
-image_height: 480
-distortion_parameters:
-   k1: -2.917e-01
-   k2: 8.228e-02
-   p1: 5.333e-05
-   p2: -1.578e-04
+image_width: 848
+image_height: 800
 projection_parameters:
-   fx: 4.616e+02
-   fy: 4.603e+02
-   cx: 3.630e+02
-   cy: 2.481e+02
+   k2: -7.3047108016908169e-03
+   k3: 4.3499931693077087e-02
+   k4: -4.1283041238784790e-02
+   k5: 7.6524601317942142e-03
+   mu: 2.8498089599609375e+02
+   mv: 2.8610238647460938e+02
+   u0: 4.2524438476562500e+02
+   v0: 3.9846759033203125e+02
 
 # Extrinsic parameter between IMU and Camera.
-estimate_extrinsic: 0   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
+estimate_extrinsic: 1   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
                         # 1  Have an initial guess about extrinsic parameters. We will optimize around your initial guess.
                         # 2  Don't know anything about extrinsic parameters. You don't need to give R,T. We will try to calibrate it. Do some rotation movement at beginning.                        
 #If you choose 0 or 1, you should write down the following matrix.
@@ -31,23 +30,23 @@ extrinsicRotation: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [0.0148655429818, -0.999880929698, 0.00414029679422,
-           0.999557249008, 0.0149672133247, 0.025715529948, 
-           -0.0257744366974, 0.00375618835797, 0.999660727178]
+   data: [-9.9992633141677389e-01, 4.9341275780694404e-03, 1.1089910930018767e-02, 
+           -4.9039224756951853e-03, -9.9998419659493765e-01, 2.7492007438955665e-03,
+           1.1103300578872334e-02, 2.6946141507085820e-03, 9.9993472575505349e-01]
 #Translation from camera frame to imu frame, imu^T_cam
 extrinsicTranslation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [-0.0216401454975,-0.064676986768, 0.00981073058949]
+   data: [ 1.0699998587400001e-02, 7.2759576141800001e-12, -2.9103830456699999e-11]
 
 #feature traker paprameters
-max_cnt: 150            # max feature number in feature tracking
+max_cnt: 120            # max feature number in feature tracking
 min_dist: 30            # min distance between two features 
 freq: 10                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
 show_track: 1           # publish tracking image as topic
-equalize: 1             # if image is too dark or light, trun on equalize to find enough features
+equalize: 0             # if image is too dark or light, trun on equalize to find enough features
 fisheye: 0              # if using fisheye, trun on it. A circle mask will be loaded to remove edge noisy points
 
 #optimization parameters
@@ -60,17 +59,17 @@ acc_n: 0.08          # accelerometer measurement noise standard deviation. #0.2 
 gyr_n: 0.004         # gyroscope measurement noise standard deviation.     #0.05  0.004
 acc_w: 0.00004         # accelerometer bias random work noise standard deviation.  #0.02
 gyr_w: 2.0e-6       # gyroscope bias random work noise standard deviation.     #4.0e-5
-g_norm: 9.81007     # gravity magnitude
+g_norm: 9.805    # gravity magnitude
 
 #loop closure parameters
 loop_closure: 1                    # start loop closure
+fast_relocalization: 1             # useful in real-time and large project
 load_previous_pose_graph: 1        # load and reuse previous pose graph; load from 'pose_graph_save_path'
-fast_relocalization: 0             # useful in real-time and large project
-pose_graph_save_path: "/home/pang/output/pose_graph/" # save and load path
+pose_graph_save_path: "/home/pang/iros/output/pose_graph/" # save and load path
 
 #unsynchronization parameters
 estimate_td: 0                      # online estimate time offset between camera and imu
-td: 0.0                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
+td: 0.010                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
 
 #rolling shutter parameters
 rolling_shutter: 0                  # 0: global shutter camera, 1: rolling shutter camera
