--- a/config/realsense/realsense_fisheye_config_iros.yaml
+++ b/config/realsense/realsense_fisheye_config_iros.yaml
@@ -3,7 +3,7 @@
 #common parameters
 imu_topic: "/imu"
 image_topic: "/mav/cam0"
-output_path: "/home/pang/iros/output/"
+output_path: "/home/pang/iros/office/"
 
 #camera calibration 
 model_type: KANNALA_BRANDT
@@ -65,7 +65,7 @@ g_norm: 9.805    # gravity magnitude
 loop_closure: 1                    # start loop closure
 fast_relocalization: 1             # useful in real-time and large project
 load_previous_pose_graph: 1        # load and reuse previous pose graph; load from 'pose_graph_save_path'
-pose_graph_save_path: "/home/pang/iros/output/pose_graph/" # save and load path
+pose_graph_save_path: "/home/pang/iros/office/pose_graph/" # save and load path
 
 #unsynchronization parameters
 estimate_td: 0                      # online estimate time offset between camera and imu
