--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -41,6 +41,9 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>camera_model</build_depend>
+
+  <run_depend>camera_model</run_depend>
   <run_depend>roscpp</run_depend>
 
 
