--- a/config/segway/segway_scooter.yaml
+++ b/config/segway/segway_scooter.yaml
@@ -34,16 +34,16 @@ extrinsicRotation: !!opencv-matrix
    rows: 3
    dt: d
    data: [
-        -0.0000,    1.0000,   -0.0000,
-    0.9744,    0.0000,    0.2250,
-    0.2250,         0,   -0.9744]
+      -0.0000,1.0000,-0.0000,
+      0.9744,0.0000,0.2250,
+      0.2250,0,-0.9744]
    cols: 3
 #Translation from camera frame to imu frame, imu^T_cam
 extrinsicTranslation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [0.0046, 0.046, -0.00873]
+   data: [0.0046,0.046,-0.00873]
 
 #feature traker paprameters
 max_cnt: 80            # max feature number in feature tracking
