--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -42,8 +42,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rosbag</build_depend>
+  <build_depend>camera_model</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rosbag</run_depend>
+  <run_depend>camera_model</run_depend>
+  <run_depend>message_runtime</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
