add dynamic spline projection error, need test

--- a/spline_vio/CMakeLists.txt
+++ b/spline_vio/CMakeLists.txt
@@ -75,8 +75,8 @@ target_link_libraries(data2bag ${PROJECT_NAME}_lib)
 cs_add_executable(generate_mask tools/generate_mask.cpp)
 target_link_libraries(generate_mask ${PROJECT_NAME}_lib)
 
-cs_add_executable(test_spline_initialization test/test_spline_initialization.cpp)
-target_link_libraries(test_spline_initialization ${PROJECT_NAME}_lib)
+#cs_add_executable(test_spline_initialization test/test_spline_initialization.cpp)
+#target_link_libraries(test_spline_initialization ${PROJECT_NAME}_lib)
 #########
 # SHARE #
 #########
